@@ -2,7 +2,7 @@ sdparm (1.07-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 07 Dec 2010 00:10:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 25 Jan 2011 19:00:00 -0500
 
 sdparm (1.06-1) unstable; urgency=low
 
